# tgl

./: .gitignore  README.md  pyproject.toml
docs/: design.md  report-spec.md
tests/: test_api.py  test_cli.py  test_cli_report.py  test_config.py  test_reporting.py
tgl/: api.py  cli.py  config.py  reporting.py
