[project]
name = "tgl-cli"
version = "0.1.0"
description = "Command-line interface for Toggl Track"
requires-python = ">=3.13"
dependencies = [
    "click",
    "requests",
]

[project.scripts]
tgl = "tgl.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tgl"]

[dependency-groups]
dev = [
    "pytest",
]
